--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -18,7 +18,7 @@
     padding: 13rem 5rem 13rem 5rem;
     // margin-bottom: 7%;
     @media screen and (max-width: 780px){
-      padding: 10rem 2rem 10rem 2rem;
+      padding: 5rem 2rem 5rem 2rem;
     }
   }
   #typewriter {
